--- a/dapp.html
+++ b/dapp.html
@@ -1181,7 +1181,7 @@
 
       let txHash = 0
 
-      Erc721Instance.methods.getPrice().call()
+      Erc721Instance.methods.price().call()
         .then((weiValue) => {
           console.log('weiValue: ', weiValue)
 
